[package]
name = "redis-cli"
version = "0.1.0"
authors = ["Alisher Matkurbanov <alishermatkurbanov0408@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
